# ChatServer

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  group.hpp  groupuser.hpp  user.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  groupmodle.hpp  offlinemessagemodle.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodle.cpp  usermodel.cpp
test/jsontest/: jsontest  jsontest.cpp
test/muduotest/: CMakeLists.txt  muduo_server.cpp
